tests/error/arg_res.gw
// [contains] this is reserved
function void test(int this){}
